--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "viralcover-ai",
+  "name": "viralcover-ai爆款封面",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,11 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "lucide-react": "^0.560.0",
-    "@google/genai": "^1.33.0"
+    "@google/genai": "^1.33.0",
+    "vite": "^7.2.7",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@tarojs/components": "^4.1.9",
+    "@tarojs/taro": "^4.1.9"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
