--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@google/genai": "^1.33.0",
     "vite": "^7.2.7",
     "@vitejs/plugin-react": "^5.1.2",
-    "@tarojs/components": "^4.1.9",
-    "@tarojs/taro": "^4.1.9"
+    "@tarojs/taro": "^4.1.9",
+    "@tarojs/components": "^4.1.9"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
